--- a/Priv portfolio/index.html
+++ b/Priv portfolio/index.html
@@ -24,7 +24,7 @@
                 <h2>Mariel G</h2>
                 <p>Aspiring ML & Data Science Enthusiast!</p>
                     <div class="social-links">
-                    <a href="https://www.linkedin.com/in/mariel-gisbon-0583a0387/" target="_blank" rel="noopener">LinkedIn</a>
+                    <a href="" target="_blank" rel="noopener">LinkedIn</a>
                     <a href="https://github.com/EvilGremlinHaha" target="_blank" rel="noopener">GitHub</a>
                      <p>My name is Mariel and this is my private portfolio, <br>
                          I enjoy communicating with people, debate, english, coding, reading,and spending time with animals!
@@ -117,3 +117,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
